--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -33,6 +33,11 @@
     --ring: 224 71.4% 4.1%;
 
     --radius: 0.5rem;
+
+    --success: 141.9 69.2% 58%;
+    --processing: 213.1 93.9% 67.8%;
+    --warning: 43.3 96.4% 56.3%;
+    --disabled: 217.9 10.6% 64.9%;
   }
 
   .dark {
@@ -63,6 +68,11 @@
     --border: 215 27.9% 16.9%;
     --input: 215 27.9% 16.9%;
     --ring: 216 12.2% 83.9%;
+
+    --success: 142.1 76.2% 36.3%;
+    --processing: 221.2 83.2% 53.3%;
+    --warning: 32.1 94.6% 43.7%;
+    --disabled: 215 13.8% 34.1%;
   }
 }
 
